assets/css/style.css
/* ... */
.radio-wrapper label::before {
    border-radius: 50%;              /* make the button a circle */
}

.radio-wrapper label::after{         /* style when checked/activated */
    content: "";
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background: var(--secondary-color);
    position: absolute;
    left: -29px;
    top:  -3px;
    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
}

.checkbox-wrapper label::after{      /* style when checked/activated */
    content: "";
    height: 6px;
    width: 14px;
    border-left: 2px solid var(--secondary-color);      /* these two lines are two sides of a rectangle */
    border-bottom: 2px solid var(--secondary-color);
    position: absolute;
    left: -26px;
    top: 1px;
    transform: rotate(-58deg);                          /* rotate the rectangle so it looks like a check mark */
}

.checkbox-wrapper input + label::after, 
.radio-wrapper input + label::after {
  content: none;
}

.checkbox-wrapper input:checked + label::after, 
.radio-wrapper input:checked + label::after {
  content: "";
}

/* End of "hero-form" styling. */

/* Define a few general styles for the following four sections. */
/* These are 'utility' classes. */
.section-title {
    font-size: 48px;       /* reduced for media-queries */
    border-bottom: 3px solid;
    color: var(--secondary-color);
    padding-bottom: 20px;
    text-align: center;
    margin: 0 auto 35px auto;
    width: 50%;
}

.primary-border {
    border-color: var(--primary-color);
}

.secondary-border {
    border-color: var(--tertiary-color);
}

.text-left {
    text-align: left;
}

.text-right {
    text-align: right;
}

.flex-row {
    display: flex;
}
/* End of general styles. */

/* Styling for What we/you do section. */
.intro p {
    line-height: 1.7;
    color: var(--tertiary-color);
    width: 80%;
    font-size: 20px;
    /* This next line will center the block. The top and bottom margins will be zero and the left & right will be auto. */
    margin: 0 auto;    
    text-align: center;
}
/* End of styles for "What we do Section". */

/* Style the "what you do" section. */
.steps {
    background: var(--primary-color);
}

.step {
    margin: 50px auto;
    padding-bottom: 50px;
    width: 80%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

.step-info {
    display: flex;
    flex-wrap: wrap;
    flex: 2 70%;    /* flex-grow, flex-basis */
    align-items: center;
}

.step-img {
    flex: 1 12%;
    margin-right: 20px;
}

.step-img img {
    max-width: 100%;
}

.step-text{
    flex: 12;
}

.step h3 {
    color: var(--secondary-color);
    font-size: 46px;
    flex: 1 30%;    /* flex-grow, flex-basis */
}

.step-text p {
    color: var(--tertiary-color);
    font-size: 18px;
}

.step-text h4 {
    font-size: 26px;
    line-height: 1.5;
    color: var(--secondary-color);
}

.step:not(:last-child) {     /* put a bottom border below every child, except the last one */
    border-bottom: 1px solid var(--tertiary-color);
}

/* End of styles for the "what you do" section. */

/* Style the "trainer" section. */

.trainers {
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    overflow: auto;    /* tells the parent element there is content inside and handle any floating elements. */
}
.trainer {
    margin: 20px;
    background: var(--secondary-color);
    color: var(--primary-color);
    flex: 1;      /* any extra space will be shared evenly */
}

/* .trainer:hover span {
    opacity: 1;
    transition-duration: 2s;
}  */

.trainer-img {
    width: 100%;
    min-height: 300px;
    background-size: cover;  /* avoid clipping the image */
    display: flex;
    padding: 15px;
    align-items: flex-end;
    position: relative;
    overflow: hidden;        /* to hide the h3 and h4 text, the trainer names */
}

.trainer-img h3 {
    position: relative;
    z-index: 900;
    font-size: 28px;
    margin-bottom: 5px;
    top: 200px;              /* move the text to the outside, which hides it due to the above 'overflow' */
}

.trainer-img h4 {
    position: relative;
    z-index: 900;
    font-size: 22px;
    top: 200px;              /* move the text to the outside, which hides it due to the above 'overflow' */
}

/* Use a pseudo-element to inject a background on top of the image that we can then manipulate with the 'transition' animation control. */
.trainer-img::after {
    content: "";
    height: 100%;
    width: 100%;
    background: linear-gradient( rgba(252, 225, 56, 0.3), var(--secondary-color));
    opacity: 0;                    /* the starting state for animation */
    position: absolute; 
    top: 0;
    left: 0;
}


.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
    top: 0px;                      /* move the h3/h4 text back into position with the animation */
    opacity: 1;                    /* the ending state for animation of the text*/
    transition-duration: .6s;
}

.trainer:hover .trainer-img::after {
    opacity: 1;                    /* the ending state for animation of the background*/
}

.trainer-1 {
    background-image: url("../images/trainer-1.jpg");
}

.trainer-2 {
    background-image: url("../images/trainer-2.jpg");
}

.trainer-3 {
    background-image: url("../images/trainer-3.jpg");
}

.trainer-bio {
    padding: 25px;
    line-height: 1.3;
}

.trainer-bio h3 {
    font-size: 28px;
    display: none;        /* removed from the display, needed for animation and media-query conflict */
}

.trainer-bio h4 {
    font-weight: lighter;
    font-size: 22px;
    margin-bottom: 15px;
    display: none;        /* removed from the display, needed for animation and media-query conflict */
}

.trainer-bio p {
    font-size: 17px;
}

/* End of styles for "trainer" section. */

/* Styles for "about us / Reach Out" section. */
.contact{
    background: var(--secondary-color);
}
/* ... */

